--- a/package.json
+++ b/package.json
@@ -11,24 +11,31 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-radio-group": "^1.2.2",
+    "axios": "^1.7.9",
     "phosphor-react": "^1.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "styled-components": "^6.1.14"
+    "react-hook-form": "^7.54.2",
+    "scheduler": "^0.25.0",
+    "styled-components": "^6.1.14",
+    "use-context-selector": "^2.0.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@rocketseat/eslint-config": "^2.2.2",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@types/styled-components": "^5.1.34",
     "@vitejs/plugin-react-swc": "^3.5.0",
-    "eslint": "^9.17.0",
+    "eslint": "^8.0.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
-    "json-server": "1.0.0-beta.3",
+    "json-server": "^0.17.1",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
     "vite": "^6.0.5"
